--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>parallelScript.Sample1</td>
+<td>testNgreports.ReportTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>PythonTestTest</td>
+<td>TutorialTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>SeleniumTestTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>JavaTestTest</td>
+<td>Cucmber</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -28,68 +24,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>parallelScript.Sample2</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>PythonTestTest</td>
+<td>setup</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>SeleniumTestTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>JavaTestTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>parallelScript.Sample3</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>PythonTestTest</td>
+<td>teardown</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>SeleniumTestTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>JavaTestTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
