--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,32 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 06:03:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1.JavaTestTest()[pri:0, instance:parallelScript.Sample1@2cd2a21f]">JavaTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.JavaTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">JavaTestTest</td> 
-  <td>TestNG-tests-2@96613626</td>   <td></td> </tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 06:03:29</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1.PythonTestTest()[pri:0, instance:parallelScript.Sample1@2cd2a21f]">PythonTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.PythonTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">PythonTestTest</td> 
-  <td>TestNG-tests-2@96613626</td>   <td></td> </tr>
-<tr bgcolor="dbbdf9">  <td>23/08/18 06:03:29</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample1.SeleniumTestTest()[pri:0, instance:parallelScript.Sample1@2cd2a21f]">SeleniumTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>23/08/18 06:03:29</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.JavaTestTest()[pri:0, instance:parallelScript.Sample2@2e55dd0c]">JavaTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>23/08/18 06:03:29</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.PythonTestTest()[pri:0, instance:parallelScript.Sample2@2e55dd0c]">PythonTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="90806a">  <td>23/08/18 06:03:29</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample2.SeleniumTestTest()[pri:0, instance:parallelScript.Sample2@2e55dd0c]">SeleniumTestTest</td> 
-  <td>TestNG-tests-1@516569050</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-2@485058393</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-3@1360689002</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-1@450287612</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-2@485058393</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-3@1360689002</td>   <td></td> </tr>
-<tr bgcolor="6163d6">  <td>23/08/18 06:03:29</td>   <td>73</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample3.SeleniumTestTest()[pri:0, instance:parallelScript.Sample3@247d8ae]">SeleniumTestTest</td> 
-  <td>TestNG-methods-1@450287612</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ReportTest.setupExtent()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setupExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:07</td>   <td>403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:10</td>   <td>3298</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.Cucmber()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">Cucmber</td> 
+  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:14</td>   <td>7082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:16</td>   <td>9232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:18</td>   <td>10806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.TutorialTest()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">TutorialTest</td> 
+  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:22</td>   <td>15271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:00:24</td>   <td>17365</td> <td>&nbsp;</td><td title="&lt;&lt;ReportTest.finishExtent()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;finishExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
 </table>
