--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.Cucmber()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">Cucmber</td> 
-  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:18</td>   <td>7508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.TutorialTest()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">TutorialTest</td> 
-  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:24</td>   <td>14067</td> <td>&nbsp;</td><td title="&lt;&lt;ReportTest.finishExtent()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;finishExtent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:07</td>   <td>-2895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:16</td>   <td>5934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:07</td>   <td>-3298</td> <td>&nbsp;</td><td title="&gt;&gt;ReportTest.setupExtent()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&gt;&gt;setupExtent</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:14</td>   <td>3784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
-<tr bgcolor="99bec8">  <td>23/08/18 07:00:22</td>   <td>11973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown()[pri:0, instance:testNgreports.ReportTest@27ff5d15]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@2146338580</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:27:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.Cucmber()[pri:0, instance:testNgreports.ReportTest@4e096385]">Cucmber</td> 
+  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:28:01</td>   <td>4736</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReportTest.TutorialTest()[pri:0, instance:testNgreports.ReportTest@4e096385]">TutorialTest</td> 
+  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:28:08</td>   <td>11653</td> <td>&nbsp;</td><td title="&lt;&lt;ReportTest.finishExtent()[pri:0, instance:testNgreports.ReportTest@4e096385]">&lt;&lt;finishExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:27:53</td>   <td>-2818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@4e096385]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:28:00</td>   <td>3355</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ReportTest.setup()[pri:0, instance:testNgreports.ReportTest@4e096385]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:27:53</td>   <td>-3216</td> <td>&nbsp;</td><td title="&gt;&gt;ReportTest.setupExtent()[pri:0, instance:testNgreports.ReportTest@4e096385]">&gt;&gt;setupExtent</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:27:58</td>   <td>1263</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown(org.testng.ITestResult)[pri:0, instance:testNgreports.ReportTest@4e096385]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="99bec8">  <td>23/08/18 07:28:06</td>   <td>9574</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ReportTest.teardown(org.testng.ITestResult)[pri:0, instance:testNgreports.ReportTest@4e096385]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
 </table>
